# tau-wallpapers

./: .gitignore  .gitlab-ci.yml  Attribution  Makefile  README.md  anda.hcl  generate_attribution.sh  meson.build  tau-wallpapers.spec
.github/workflows/: makefile.yml  package.yml
backgrounds/: 3D_01.xml.in  and-machines.xml.in  backgrounds.xml.in  dim-gunger.xml.in  fakurian-design.xml.in  generate_gnome_backgrounds.sh  marek-piwnicki.xml.in  maxim-berg.xml.in  meson.build  neutrino.xml.in  solen-feyissa.xml.in  tau-backgrounds.xml.in  tau.xml.in  warren-umoh.xml.in
default/: Makefile  generate_gnome_backgrounds.sh  gnome-backgrounds-tau-default.xml  gnome-backgrounds-tau-wallpapers.xml  gnome-backgrounds-tau.xml  tau-metadata.desktop
